trunk/Archive2/59/d86bd87010dde8/output
main.cpp:7:38: error: conversion from 'int' to non-scalar type 'std::vector<int>' requested
 thread_local std::vector<int> rage = 1;
                                      ^
main.cpp: In function 'void increase_rage(const string&)':
main.cpp:15:22: error: 'cout' was not declared in this scope
     for(auto i:rage) cout<< i << '\n';
                      ^
main.cpp:15:22: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.2/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp: In function 'int main()':
main.cpp:25:27: error: 'cout' was not declared in this scope
          for(auto i:rage) cout<< i << '\n';
                           ^
main.cpp:25:27: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.2/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
